objects/GCF_Report_Data__c.object
<CustomObject>
    <fields>
        <fullName>BillingPlan_E__c</fullName>
        <label>BillingPlan (Expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPlan_R__c</fullName>
        <label>BillingPlan (Recoginized)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPlan_TIV__c</fullName>
        <label>BillingPlan (Total Invoice Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred__c</fullName>
        <label>Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <label>End User Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_GARN__c</fullName>
        <label>End User GARN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Sub_Region__c</fullName>
        <label>End User Sub Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Subsidiary_ID__c</fullName>
        <label>End User Subsidiary ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FYM_R__c</fullName>
        <label>FYM (Recognized)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYM_TIV_E__c</fullName>
        <label>FYM_TIV_E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYM_TIV__c</fullName>
        <label>FYM (Total Invoice Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FYM_U__c</fullName>
        <label>FYM (Upside)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <label>Forecast Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Comments__c</fullName>
        <label>GC Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Genesys_Care_Specialist__c</fullName>
        <label>Genesys Care Specialist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incremental_E__c</fullName>
        <label>Incremental (Expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_R__c</fullName>
        <label>Incremental (Recognized)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_TIV_E__c</fullName>
        <label>Incremental_TIV_E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_TIV__c</fullName>
        <label>Incremental (Total Invoice Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_U__c</fullName>
        <label>Incremental (Upside)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Date__c</fullName>
        <label>Maintenance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Text__c</fullName>
        <externalId>true</externalId>
        <label>Month Text</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <externalId>true</externalId>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <externalId>true</externalId>
        <label>Offering Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Expected_Date__c</fullName>
        <label>PO Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_Text__c</fullName>
        <externalId>true</externalId>
        <label>Quarter Text</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <externalId>true</externalId>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recognized__c</fullName>
        <label>Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Opportunity__c</fullName>
        <label>Reference Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Order__c</fullName>
        <label>Reference Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Quote__c</fullName>
        <label>Reference Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Service_Contract__c</fullName>
        <label>Reference Service Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <externalId>true</externalId>
        <label>Revenue Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_GARN__c</fullName>
        <label>Sold To GARN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Name__c</fullName>
        <label>Sold To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Subsidiary_ID__c</fullName>
        <label>Sold To Subsidiary ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Booking_Forecast_E__c</fullName>
        <label>Total_Booking_Forecast (Expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Booking_Forecast_U__c</fullName>
        <label>Total_Booking_Forecast (Upside)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Text__c</fullName>
        <externalId>true</externalId>
        <label>Year Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <externalId>true</externalId>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GCF Report Data</label>
    <nameField>
        <displayFormat>CGF#{0000000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCF Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>